# NLP-course

./: .gitignore  pyproject.toml  setup.bash
src/nlp_course/: __init__.py
src/nlp_course/code/: .last_run_name  en_compiled_cot_f1.json  inlang_compiled_cot_em.json  inlang_compiled_cot_f1.json  main.py  results_log_week4.txt  week1.ipynb  week2.ipynb  week3.ipynb  week4.ipynb  week4.py  week4_hf_notebook.ipynb
src/nlp_course/code/week4/: common.py  generate_dataset.py  inference.py  train.py  week4.ipynb
src/nlp_course/code/week4/config/: llama-3.yml
src/nlp_course/code/week5/: eval_model.py  inference.py  train.py  utils.py  week5.ipynb  week5.py
src/nlp_course/code/week5/config/: llama-3-in-lang.yml
src/nlp_course/code/week5/data/: val_en_input_output.jsonl
src/nlp_course/code/week_4_5/: analyze_results.ipynb  common.py  data_preproc.ipynb  eval_model.py  utils.py
src/nlp_course/code/week_4_5/config/: llama-3.yml
src/nlp_course/code/week_4_5/data/: eval_results_meta_llama_no_finetune.csv  eval_results_week41_axo-2024-09-24-20-47-06-872a.csv  finetune_base_inlang_input_output.jsonl  finetune_base_inlang_val.jsonl
src/nlp_course/code/week_5_6/: data_preproc.ipynb  eval_model.py  inference.py  prompting.ipynb  utils.py
src/nlp_course/report/: custom.bib  main.tex  root.tex
src/nlp_course/week1/: main.ipynb  main.py
