[project]
name = "nlp-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.6.3",
    "torch>=2.4.1",
    "datasets>=2.21.0",
    "plotly>=5.24.0",
    "polars>=1.6.0",
    "jaxtyping>=0.2.34",
    "pandas>=2.2.2",
    "numpy>=2.1.1",
    "transformers>=4.44.2",
    "openai>=1.43.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "modal>=0.64.83",
    "nltk>=3.9.1",
    "accelerate>=0.30.2"
    "ipykernel="*" "
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
